--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -1,29 +1,25 @@
 @charset "UTF-8";
 .slide-enter,
 .slide-exit {
-  opacity: 0;
   transition: all 1s ease-in-out;
-  transform: translateY(-0%);
 }
 
 .slide-enter {
-  opacity: 1;
-  transition: all 1s ease-in-out;
-}
-
-.slide-exit {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  transform: translateX(0%);
-  opacity: 0;
-  transition: all 1s ease-in-out;
+  height: 100%;
+  transform: translateX(100%);
 }
 
 .slide-exit-active {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   transform: translateX(-100%);
-  transition: all 1s ease-in-out;
 }
 @font-face {
   font-family: "Gilroy";
